<resources>
    <string name="app_name" translatable="false">Facebook</string>
    <string name="meta_logo" translatable="false">Meta Logo</string>
    <string name="mobile_number_or_email">Mobile number or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create New Account</string> <!-- Add this line -->
</resources>
