<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_color"
        tools:ignore="MissingConstraints" />



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="80dp"
            app:srcCompat="@drawable/facebook" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/mobile_number_or_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/Loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/button_color"
            android:padding="1dp"
            android:text="@string/log_in"
            android:textColor="@color/button_text_color" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/forgot_password"
            android:textColor="@color/text_color" />


         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/createNewAccountButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:padding="10dp"
             android:text="@string/create_new_account"
             android:textColor="@color/button_color"
             android:background="@drawable/round_btn">


         </androidx.appcompat.widget.AppCompatButton>
        <ImageView
            android:id="@+id/main_iv_meta_logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/meta_logo"
            app:srcCompat="@drawable/meta_light_logo"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
